[metadata]
name = systools
version = 0.1.3
author = hayj
description = A project gathering basic Python tools.
url = https://github.com/hayj/SystemTools
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    psutil
    parsedatetime
    arrow
    pytz
    tzlocal
    sh
    pathlib; python_version < "3.4"
    tabulate
    requests
    xtract
    unidecode

